# Sudoku-Solver-with-Parallel-Dancing-Links

./: CMakeLists.txt  README.md  bulk_execution.ps1  dancing_links.c  dancing_links_parallel.c  dancing_links_parallel_2.c  dancing_links_serial.c  dlx_kernels.cl  dlx_kernels_2.cl  kernels.cl  list.c  ocl_boiler.h  old.c  old.cl  sbt_kernels.cl  setup.h  simple_bruteforce.c  time.ps1
inputs/: 1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt
